// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root instance methods componentDidMount should call action creators 1`] = `
Array [
  Object {
    "activity": "",
    "attachments": "/assets/attachments.json",
    "channels": "/assets/channels.json",
    "classifiers": "/assets/classifiers.json",
    "completion": "/assets/completion.json",
    "editor": "/flow/editor",
    "environment": "/assets/environment.json",
    "fields": "/assets/fields.json",
    "flows": "/assets/flows.json",
    "functions": "/assets/functions.json",
    "groups": "/assets/groups.json",
    "labels": "/assets/labels.json",
    "languages": "/assets/languages.json",
    "recents": "/assets/recents.json",
    "recipients": "/assets/recipients.json",
    "resthooks": "/assets/resthooks.json",
    "revisions": "/assets/revisions.json",
    "simulateResume": "",
    "simulateStart": "",
    "templates": "/assets/templates.json",
  },
  "a4f64f1b-85bc-477e-b706-de313a022979",
  undefined,
  undefined,
]
`;

exports[`Root render should apply translating style if passed a truthy translating prop 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    className="translating"
    data-spec="editor-container"
    id="editor-container"
  >
    <div
      className="footer"
    >
      <div
        className="download_button"
      >
        <Button
          name="Download"
          onClick={[Function]}
          type="primary"
        />
      </div>
    </div>
    <div
      className="editor"
      data-spec="editor"
    >
      <Connect(LanguageSelector) />
      <RevisionExplorer
        assetStore={null}
        createNewRevision={[MockFunction]}
        loadFlowDefinition={[MockFunction]}
        simulating={false}
      />
    </div>
  </div>
</PageVisibility>
`;

exports[`Root render should render flow if passed a definition, language 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    data-spec="editor-container"
    id="editor-container"
  >
    <div
      className="footer"
    >
      <div
        className="download_button"
      >
        <Button
          name="Download"
          onClick={[Function]}
          type="primary"
        />
      </div>
    </div>
    <div
      className="editor"
      data-spec="editor"
    >
      <Connect(LanguageSelector) />
      <Connect(Flow) />
      <RevisionExplorer
        assetStore={null}
        createNewRevision={[MockFunction]}
        loadFlowDefinition={[MockFunction]}
        simulating={false}
      />
    </div>
  </div>
</PageVisibility>
`;

exports[`Root render should render self, children with required props 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    data-spec="editor-container"
    id="editor-container"
  >
    <div
      className="footer"
    >
      <div
        className="download_button"
      >
        <Button
          name="Download"
          onClick={[Function]}
          type="primary"
        />
      </div>
    </div>
    <div
      className="editor"
      data-spec="editor"
    >
      <Connect(LanguageSelector) />
      <RevisionExplorer
        assetStore={null}
        createNewRevision={[MockFunction]}
        loadFlowDefinition={[MockFunction]}
        simulating={false}
      />
    </div>
  </div>
</PageVisibility>
`;
